# shinazki

./: package-lock.json  package.json  pyproject.toml  settings.toml
.github/workflows/: main.yml  script.workflow.yml
api/: requirements.txt  select_postgres.py
jobs/: yt_api.py
public/: index.html
src/: App.vue  main.js
src/components/appHeader/: AppHeader.module.css  AppHeader.vue
src/components/controls/: Controls.vue
src/components/songList/: SongList.vue
