[tool.poetry]
name = "y2pilot"
version = "0.1.0"
description = ""
authors = ["João Paulo Schiavon <schiavonjp@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
google = "^3.0.0"
google-api-python-client = "^2.47.0"
httplib2 = "^0.20.4"
oauth2client = "^4.1.3"
psycopg2 = "^2.9.3"


[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
